force-app/main/default/objects/Partner_Lead_Assignment__c/Partner_Lead_Assignment__c.object-meta.xml
<CustomObject>
<label
  >Partner Lead Assignment</label><pluralLabel
  >Partner Lead Assignments</pluralLabel>
    <nameField><displayFormat>PLA-{00000000}</displayFormat><label
    >Partner Lead Assignment Number</label><type>AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities>
</CustomObject>