force-app/main/default/objects/Partner_Lead_Assignment__c/fields/Active_Assignment_Key__c.field-meta.xml
<CustomField>
    <fullName>Active_Assignment_Key__c</fullName>
    <description>Set to the Lead Id while Status__c = Assigned (awaiting the
  partner's decision), cleared to null once Accepted or Rejected. Unique so
  concurrent distribution attempts cannot create two active assignments for
  the same lead - mirrors Approval_Plan__c.Current_Plan_Key__c /
  Deal_Review_Plan__c.Current_Plan_Key__c.</description>
    <externalId>true</externalId>
    <label>Active Assignment Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>