force-app/main/default/objects/Partner_Lead_Assignment__c/fields/Assignment_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Strategy__c</fullName>
    <description>How this assignment's partner was selected. Manual is a
  human-picked assignment (LeadDistributionService.assignLeadToPartner);
  Round Robin is resolved by LeadDistributionService.distributeLead from an
  active Lead_Distribution_Rule__mdt. Non-restricted so future strategies
  (mirroring Lead_Distribution_Rule__mdt.Distribution_Method__c's other
  values - Territory, Product Specialization, Partner Tier, AI
  Recommendation) can be added without a metadata deploy once they're
  actually built.</description>
    <label>Assignment Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>