force-app/main/default/objects/Partner_Lead_Assignment__c/fields/Distribution_Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Rule_Key__c</fullName>
    <description>DeveloperName of the Lead_Distribution_Rule__mdt record
  that produced this assignment. Blank for a Manual assignment.</description>
    <label>Distribution Rule Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>