force-app/main/default/objects/Partner_Lead_Assignment__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Partner Lead Assignments</relationshipLabel>
    <relationshipName>Partner_Lead_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>