force-app/main/default/objects/Partner_Lead_Assignment__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Lead Assignments</relationshipLabel>
    <relationshipName>Partner_Lead_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>