force-app/main/default/objects/Partner_Lead_Assignment__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <label>Partner Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Lead Assignments</relationshipLabel>
    <relationshipName>Partner_Lead_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>