force-app/main/default/objects/Partner_Lead_Assignment__c/fields/Rejected_On__c.field-meta.xml
<CustomField>
    <fullName>Rejected_On__c</fullName>
    <label>Rejected On</label>
    <type>DateTime</type>
</CustomField>