force-app/main/default/objects/Partner_Lead_Assignment__c/fields/Response_Due_On__c.field-meta.xml
<CustomField>
    <fullName>Response_Due_On__c</fullName>
    <label>Response Due On</label>
    <type>DateTime</type>
</CustomField>