force-app/main/default/objects/Partner_Lead_Assignment__c/fields/Routing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Routing_Reason__c</fullName>
    <description>Human-readable explanation of why this partner was
  selected, so operations can answer "why did this partner receive this
  lead" without reading Apex.</description>
    <label>Routing Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>